Fixed layout issues

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,4 @@
-.product {
+/* .product {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,6 @@
   max-height: 200px;
   width: 100%;
   object-fit: contain;
-
 }
 
 .product_button {
@@ -31,4 +30,77 @@
 .product_info {
   height: 100px;
   margin-bottom: 15px;
+} */
+/* Styling for the individual product card */
+
+.product {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  width: 100%;
+  min-height: 500px;
+  min-width: 100px;
+  background-color: white;
+  padding-top: 10px;
+  z-index: 1;
+}
+
+.product > img {
+  max-height: 200px;
+  width: 80%;
+  object-fit: contain;
+  margin-bottom: 15px;
+  margin-top: -10px;
+}
+
+.product_info {
+  height: auto;
+  padding: 0 10px;
+  text-align: center;
+}
+
+.product_title {
+  font-size: 16px;
+  margin: 10px 0;
+}
+
+.product_details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.product_rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.product_rating p {
+  margin: 0 2px;
+}
+
+.product_price {
+  font-size: 16px;
+  font-weight: bold;
+  color: #c45500;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.product_button {
+  background: #f0c14b;
+  border: 1px solid;
+  border-radius: 50px;
+  margin-top: 10px;
+  width: 150px;
+  font-size: 16px;
+  padding: 7px;
+  border-color: #f0c14b;
+  color: #111;
+  cursor: pointer;
 }
