--- a/src/components/Product/Products.css
+++ b/src/components/Product/Products.css
@@ -1,10 +1,4 @@
-/* .products_row {
-  display: flex;
-  z-index: 1;
-  margin-left: 5px;
-  margin: 5px;
-} */
-.products_container {
+/* .products_container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,10 +7,10 @@
 .products_row {
   display: flex;
   margin-bottom: 20px;
+  background-color: red;
 }
 
-/* Styling each product card */
-/* .product {
+.product {
   margin: 10px;
   padding: 10px;
   border: 1px solid #eaeaea;
@@ -24,21 +18,41 @@
   width: 300px;
   display: flex;
   flex-direction: column;
-} */
+}
 
-/* .product_title {
+.product_image {
+  height: 150px;
+  object-fit: contain;
+}
+
+.product_title {
   font-size: 16px;
   font-weight: bold;
   margin: 10px 0;
-} */
+}
 
 .product_rating {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .product_price {
   font-size: 16px;
   font-weight: bold;
   color: #C45500;
+} */
+/* Container for the product rows */
+.products_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Each row of products */
+.products_row {
+  display: flex;
+  margin-bottom: 20px;
+  width: 100%;
+
 }
